# Fenix

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  data.csv  pyproject.toml
.circleci/: config.yml
Fenix/: config.yaml  main.py
Fenix/src/: authenticate.py  config.py  database.py  features.py  notion_helpers.py  s3.py  secrets.py  users.py
app/: config.yaml  main.py
app/src/: config.py  features.py  notion_import.py  secrets.py
tests/: test_features.py
tf/: deploy.tf  iam.tf  lambda.tf  lambda_handler.py  lambda_helper.py  locals.tf  outputs.tf  terraform.tfstate  terraform.tfstate.1684491457.backup  terraform.tfstate.backup  var.tf
