[tool.poetry]
name = "fenix training"
version = "0.0.1"
description = "Web app for tracking Fenix's separation training progress"
authors = ["kristiakarakatsani <kristia.karakatsani@streetbees.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"
plotly = "^5.14.1"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
