[tool.poetry]
name = "fenix training"
version = "0.0.1"
description = "Web app for tracking Fenix's separation training progress"
authors = ["kristiakarakatsani <kr.karakatsani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"
plotly = "^5.14.1"
pyyaml = "^6.0"
streamlit-extras = "^0.2.7"
boto3 = "^1.26.122"
omegaconf = "^2.3.0"
pymysql = "^1.0.3"
bcrypt = "^4.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"

[tool.pytest.ini_options]
pythonpath = ["Fenix"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider" # deactivating pytest caching.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
